fixed yellow caution

--- a/BucketList/BucketList.csproj
+++ b/BucketList/BucketList.csproj
@@ -255,22 +255,23 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Images\BucketList500.PNG" />
+    <Content Include="Images\BucketListCleveland.png" />
+    <Content Include="Images\BucketListClevelandsmall.png" />
+    <Content Include="Images\gluten-free-restaurant.jpg" />
+    <Content Include="Images\shopping_bag_gr.png" />
     <Content Include="Images\Squad.jpg" />
     <Content Include="Scripts\city.list.us.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.1.1-vsdoc.js" />
     <Content Include="Images\Bradsmall.png" />
-    <Content Include="Images\bucket-list-clip-art-bucket-list-charm-and-letters-sy9LBH-clipart.jpg" />
     <Content Include="Images\bucketlistblack.png" />
     <Content Include="Images\bucketlistwhite.png" />
-    <Content Include="Images\Cleveland.jpg" />
     <Content Include="Images\clevlandbkgrnd.jpg" />
     <Content Include="Images\Kendrasmall.jpg" />
     <Content Include="Images\TopLogoBlack.ico" />
     <Content Include="Images\TopLogoBlack.png" />
     <Content Include="Images\TopLogoWhite.png" />
     <Content Include="Images\Willsmall.jpg" />
-    <Content Include="Images\Zerricksmall.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
